Move Arrow JVM flag to JDK_JAVA_OPTIONS